--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
-          <li>SHAN</li>
-          <li>MANNA</li>
-          <li>MASA</li>
+          <li>プログラミングとは</li>
+          <li>学べるレッスン</li>
+          <li>お問い合わせ</li>
         </ul>
       </div>
     </div>
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO DEAR<span>.</span></h1>
-        <h2>ファンタスティックな世界へようこそ</h2>
+        <h1>HELLO WORLD<span>.</span></h1>
+        <h2>プログラミングの世界へようこそ</h2>
       </div>
       
       <div class="contents">
-        <h3 class="section-title">イベント</h3>
+        <h3 class="section-title">学べるレッスン</h3>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
           <p>HTML & CSS</p>
@@ -62,8 +62,8 @@
       <div class="footer-logo">Progate</div>
       <div class="footer-list">
         <ul>
-          <li>概要</li>
-          <li>紹介</li>
+          <li>会社概要</li>
+          <li>採用</li>
           <li>お問い合わせ</li>
         </ul>
       </div>
