--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>ShanSHAN</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -10,7 +10,7 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
-          <li>プログラミングとは</li>
+          <li>ShanSHANとは</li>
           <li>学べるレッスン</li>
           <li>お問い合わせ</li>
         </ul>
@@ -20,26 +20,26 @@
     <div class="main">
       <div class="copy-container">
         <h1>HELLO WORLD<span>.</span></h1>
-        <h2>プログラミングの世界へようこそ</h2>
+        <h2>中国語の世界へようこそ</h2>
       </div>
 
       <div class="contents">
         <h3 class="section-title">学べるレッスン</h3>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
-          <p>HTML & CSS</p>
+          <p>発音</p>
         </div>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
-          <p>PHP</p>
+          <p>単語</p>
         </div>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
-          <p>Ruby</p>
+          <p>文法</p>
         </div>
         <div class="contents-item">
           <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
-          <p>Swift</p>
+          <p>テスト</p>
         </div>
       </div>
 
