--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">ShanSHAN</div>
       <div class="header-list">
         <ul>
           <li>ShanSHANとは</li>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="footer">
-      <div class="footer-logo">Progate</div>
+      <div class="footer-logo">ShanSHAN</div>
       <div class="footer-list">
         <ul>
           <li>会社概要</li>
