--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
       <div class="contents">
         <h3 class="section-title">学べるレッスン</h3>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+          <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fpixel77.com%2Fwp-content%2Fuploads%2F2013%2F06%2FMarilyn-diptych.jpg&imgrefurl=https%3A%2F%2Fpixel77.com%2Fart-history-pop-art-motifs%2F&docid=JifQ2nW8q-QppM&tbnid=dPGO9Fv7EmuylM%3A&vet=10ahUKEwii2_io-KHhAhWKyrwKHZqQBr4QMwhxKCkwKQ..i&w=1181&h=1198&bih=823&biw=899&q=andyworhol%20art&ved=0ahUKEwii2_io-KHhAhWKyrwKHZqQBr4QMwhxKCkwKQ&iact=mrc&uact=8">
           <p>発音</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+          <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fi.pinimg.com%2Foriginals%2Fb2%2Ff8%2F3e%2Fb2f83e5e5f4fc8b84e1b5fe1b73e9ecd.jpg&imgrefurl=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F16607092350359626%2F&docid=hmtHyquJ1l69dM&tbnid=z7SyQ342ALwCfM%3A&vet=10ahUKEwii2_io-KHhAhWKyrwKHZqQBr4QMwheKBYwFg..i&w=364&h=450&bih=823&biw=899&q=andyworhol%20art&ved=0ahUKEwii2_io-KHhAhWKyrwKHZqQBr4QMwheKBYwFg&iact=mrc&uact=8">
           <p>単語</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+          <img src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjps_WK-KHhAhWMVrwKHfMwBeEQjRx6BAgBEAU&url=http%3A%2F%2Fgonzalopinelosalas.blogspot.com%2F2013%2F05%2Fpop-art.html&psig=AOvVaw0g9P5Eu3SOePwERYnP5TSS&ust=1553762841622198">
           <p>文法</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+          <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fissueoftissue.files.wordpress.com%2F2012%2F02%2Fwarhol-kleenex.jpg&imgrefurl=https%3A%2F%2Fissueoftissue.wordpress.com%2F2012%2F02%2F07%2F7-pop-art-repetition%2F&docid=mY_VlMiJ0lVXxM&tbnid=95Ihw0GaH0aJjM%3A&vet=10ahUKEwii2_io-KHhAhWKyrwKHZqQBr4QMwhDKAgwCA..i&w=997&h=993&bih=823&biw=899&q=andyworhol%20art&ved=0ahUKEwii2_io-KHhAhWKyrwKHZqQBr4QMwhDKAgwCA&iact=mrc&uact=8">
           <p>テスト</p>
         </div>
       </div>
